--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,8 +3,18 @@
 
 h1 {
   color: purple;
+  font-family: cursive;
 }
 
 .turtles {
   color: teal;
+}
+
+h3 {
+  color: navy;
+}
+
+body {
+  text-align: left;
+  font-family: Helvetica;
 }
